--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "nuxt": "^2.0.0",
     "@nuxtjs/dotenv": "^1.4.0",
     "contentful": "^7.14.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "nuxt-property-decorator": "^2.5.1"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.6.0",
